--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
       <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
+      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
       <!-- <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a> -->
       <!-- <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a> -->
     </div>
@@ -84,7 +84,7 @@ body, html {
 </header>
 
 <!-- About Section -->
-<div class="w3-container" style="padding:128px 16px" id="about">
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="about">
   <h3 class="w3-center">ABOUT THE GROUP</h3>
   <p class="w3-center w3-large">Our core focus</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -107,16 +107,17 @@ body, html {
 </div>
 
 <!-- Work section -->
-<div id="work" class="w3-container w3-light-grey" style="padding:128px 16px">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>Our projects.</h3>
+<div id="work" class="w3-container" style="padding:128px 16px">
+  <div class="w3-row-padding w3-center">
+    <!-- <div class="w3-col m6"> -->
+      <h3>Our projects</h3>
       <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore.</p> -->
       <!-- <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p> -->
-    </div>
-    <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/w3images/phone_buildings.jpg" alt="Buildings" width="700" height="394">
-    </div>
+    <!-- </div> -->
+    <!-- <div class="w3-col m6"> -->
+      <!-- <img class="w3-image w3-round-large" src="images/growing_comp_bf_pix=2k_seed=default.gif" alt="Growth GIF" width="700" height="394"> -->
+      <img class="w3-image w3-round-large" src="images/epitopes.png" alt="Epitopes" width="700" height="394">
+    <!-- </div> -->
   </div>
 
   <div class="w3-row-padding w3-grayscale">
@@ -164,7 +165,7 @@ body, html {
 </div>
 
 <!-- Team Section -->
-<div class="w3-container" style="padding:128px 16px" id="team">
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="team">
   <h3 class="w3-center">THE TEAM</h3>
   <!-- <p class="w3-center w3-large">The ones who runs this company</p> -->
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
