Add McAuley image, email and text

--- a/index.html
+++ b/index.html
@@ -168,18 +168,18 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="team">
   <h3 class="w3-center">THE TEAM</h3>
   <!-- <p class="w3-center w3-large">The ones who runs this company</p> -->
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+  <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m0 w3-margin-bottom">
       <!-- Empty div for spacing -->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="McAuley" style="width:100%">
+        <img src="images/McAuley_photo.jpg" alt="McAuley" style="width:100%">
         <div class="w3-container">
           <h3>Michael McAuley, PhD</h3>
-          <p class="w3-opacity">Mathematician</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p class="w3-opacity">Lead Mathematician</p>
+          <p>Michael McAuley is an expert in probability theory, researching the geometry of smooth Gaussian fields and Gaussian multiplicative chaos. He is currently a lecturer at Technological University Dublin.</p>
+          <p><a href="mailto:michael.mcauley@tudublin.ie"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></a></p>
         </div>
       </div>
     </div>
@@ -188,9 +188,9 @@ body, html {
         <img src="/w3images/team1.jpg" alt="Wells" style="width:100%">
         <div class="w3-container">
           <h3>David Wells, PhD</h3>
-          <p class="w3-opacity">Biologist</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p class="w3-opacity">Lead Biologist</p>
+          <p>David Wells works at the interface of research and application. Building bioinformatics tools and pipelines to empower modern medicine. Currently he is focused on pathogen surveillance and metagenomics.</p>
+          <!-- <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p> -->
         </div>
       </div>
     </div>
