Bugfix: Add links to buttons

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ body, html {
           <p>Aggregate HLA allele frequencies data from allelefrequencies.net at large multi-population scale.</p>
           <p>HLAfreq allows you to download and combine HLA allele frequencies from multiple datasets, e.g. combine data from several studies within a country or combine countries. Useful for studying regional diversity in immune genes and, when paired with epitope prediction, estimating a population's ability to mount an immune response to specific epitopes.</p>
           <p>
-            <button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-book"></i> Docs</button>
-            <button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-code-fork"></i> Code</button>
-            <button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-newspaper-o"></i> Paper</button>
+            <a href="https://barinthusbio.github.io/HLAfreq/HLAfreq.html"><button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-book"></i> Docs</button></a>
+            <a href="https://github.com/BarinthusBio/HLAfreq"><button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-code-fork"></i> Code</button></a>
+            <a href="https://doi.org/10.1101/2023.09.15.557761"><button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-newspaper-o"></i> Paper</button></a>
           </p>
         </div>
       </div>
@@ -152,8 +152,8 @@ body, html {
           <p class="w3-opacity">Software</p>
           <p>Epitope aligner is for manipulating epitope coordinates and sequences so it is easy to map epitopes between sequences in an alignment. This lets you combine epitopes from different sources and calculate things like epitope density in a set of proteins.</p>
           <p>
-            <button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-book"></i> Docs</button>
-            <button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-code-fork"></i> Code</button>
+            <a href="https://barinthusbio.github.io/epitope_aligner/epitope_aligner.html"><button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-book"></i> Docs</button></a>
+            <a href="https://github.com/BarinthusBio/epitope_aligner"><button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-code-fork"></i> Code</button></a>
             <!-- <button class="w3-button w3-light-grey w3-col s4 w3-margin-bottom"><i class="fa fa-newspaper-o"></i> Paper</button> -->
           </p>
         </div>
